# game25sp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dialog_helper.py  main.cpp
.github/workflows/: cmake-multi-platform.yml  line-counter.yml
assets/shader/: crt.frag  pixel.frag
assets/shader/bloom/: gaussian.frag  (+1 more)
src/: Common.cpp  Common.hpp  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp  Prelude.hpp  ResourceManager.cpp  ResourceManager.hpp  ThreadPool.cpp  ThreadPool.hpp  Window.cpp  Window.hpp
src/components/: Collision.cpp  Collision.hpp  Layout.cpp  Layout.hpp  Lighting.cpp  Lighting.hpp  Music.cpp  Music.hpp  Render.cpp  Render.hpp  SceneTree.hpp  Scripts.cpp  Scripts.hpp  Tweening.cpp  Tweening.hpp  Velocity.hpp
src/prefabs/: Banner.cpp  Banner.hpp  Bullet.cpp  Bullet.hpp  DialogBox.cpp  DialogBox.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp  PlayerBullet.cpp  PlayerBullet.hpp  Root.cpp  Root.hpp  SimpleMapLayer.cpp  SimpleMapLayer.hpp  SplashScreen.cpp  SplashScreen.hpp
src/systems/: CollisionControl.cpp  CollisionControl.hpp  LightingControl.cpp  LightingControl.hpp  MovementControl.cpp  MovementControl.hpp  MusicControl.cpp  MusicControl.hpp  RenderControl.cpp  RenderControl.hpp  SceneControl.cpp  SceneControl.hpp  ScriptsControl.cpp  ScriptsControl.hpp  TweeningControl.cpp  TweeningControl.hpp
src/utils/: AnimatedTextureGenerator.cpp  AnimatedTextureGenerator.hpp  DialogGenerator.cpp  DialogGenerator.hpp  LazyLoader.cpp  LazyLoader.hpp  MovementUtils.cpp  MovementUtils.hpp  TextureGenerator.cpp  TextureGenerator.hpp
test/: SceneTreeTests.hpp
